--- a/git.html
+++ b/git.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is my first Git Hub Page</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi reprehenderit fuga rem voluptates veritatis atque earum. A, et laudantium dignissimos neque aspernatur ad, quam deleniti voluptate assumenda adipisci, accusamus esse!</p>
     
 </body>
 </html>
